--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Matt Gale <matt@littleball.co.uk>",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "6.3.17",
+    "babel-loader": "6.2.0",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
     "tape": "4.2.2"
   }
 }
