--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple way to get inputs from your device",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "babel-tape-runner src/*_spec.js | tap-spec",
+    "build": "babel src --ignore src/*_spec.js --out-dir lib"
   },
   "author": "Matt Gale <matt@littleball.co.uk>",
   "license": "MIT",
@@ -13,6 +14,8 @@
     "babel-loader": "6.2.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
+    "babel-tape-runner": "2.0.0",
+    "tap-spec": "4.1.1",
     "tape": "4.2.2"
   }
 }
